argo-cd/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: argocd-server-network-policy
    namespace: argocd
spec:
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    app.kubernetes.io/name: ingress-nginx
    podSelector:
        matchLabels:
            app.kubernetes.io/name: argocd-server
    policyTypes:
        - Ingress
